src/main/kotlin/university/innopolis/eolang/base/EO.bnf
{
  parserClass="university.innopolis.eolang.base.parser.EOParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="EO"
  psiImplClassSuffix="Impl"
  psiPackage="university.innopolis.eolang.base.psi"
  psiImplPackage="university.innopolis.eolang.base.psi.impl"

  elementTypeHolderClass="university.innopolis.eolang.base.psi.EOTypes"
  elementTypeClass="university.innopolis.eolang.base.psi.EOElementType"
  tokenTypeClass="university.innopolis.eolang.base.psi.EOTokenType"
}

program ::= [ license ] [ metas ] { object eol }
license ::= { comment eol } eol
metas ::= { one_meta eol } eol
comment ::= '#' any eol
one_meta ::= '+' NAME '␣' any eol
object ::= ( abstraction | application ) details
details ::= [ tail ] { vtail }
tail ::= eol tab { object eol } untab
vtail ::= eol method [ htail ] [ suffix ] [ tail ]
abstraction ::= attributes [ suffix [ '␣ /' NAME ] ]
attributes ::= '[' attribute { '␣' attribute } ']'
attribute ::= '@' | NAME [ '...' ]
suffix ::= '␣' '>' '␣' ( '@' | NAME ) [ '!' ]
method ::= '.' ( NAME | 'ˆ' )
application ::= head [ htail ]
htail ::= application method
        | '(' application ')'
        | application ':' NAME
        | application suffix
        | application '␣' application
head ::= NAME | data | '@' | '$'
        | 'ˆ' | '*' | NAME '.'
data ::= bytes | STRING | INTEGER
        | CHAR | FLOAT [ EXP ] | REGEX
bytes ::= BYTE { '-' BYTE }
